# server.js
@@ -6,6 +6,8 @@ import LoginRouter from './routes/loginRoute.js'
 const require = createRequire(import.meta.url);
 const outputJson = require("./swagger-output.json");
 const cookieParser = require('cookie-parser');
+import userRouter from './routes/UserRoutes.js';
+import locacaoRouter from './routes/LocacaoRoutes.js';
 
 
 const server = express();
@@ -14,7 +16,9 @@ server.use(express.json());
 
 server.use("/docs", swaggerUi.serve, swaggerUi.setup(outputJson));
 server.use("/imovel", imovelRouter);
-server.use("/User", LoginRouter);
+server.use("/login", LoginRouter);
+server.use('/user', userRouter);
+server.use('/locacao', locacaoRouter);
 server.listen(5000, function() {
     console.log("servidor web em funcionamento!");
 })
